[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-management-openenv"
version = "0.1.0"
description = "RL environment for IT incident management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.0",
    "pydantic==2.7.0",
    "openai==1.30.0",
    "requests==2.32.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["environment", "server"]
